# CryengineSample-CMakePluginWithLib

./: .gitignore  CMakePluginWithLib.cryproject  cryplugin.csv  license.txt  readme.md
Code/: CMakeLists.txt  Plugin.cpp  Plugin.h
ThirdPartyLibs/ThirdPartyLib/: license.txt  readme.md
ThirdPartyLibs/ThirdPartyLib/include/: IPublicInterface.h
ThirdPartyLibs/ThirdPartyLib/lib/: ThirdPartyLib.lib
